--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
-body {
-background-image: url("../images/pattern-background-desktop.svg");
+body{
+    font-family: 'Red Hat Display', sans-serif;
+    background-image: url(../images/pattern-background-desktop.svg);
+    background-color: hsl(225, 100%, 94%);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+#card{
+    text-align: center;
+   
 }
