--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,21 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
 }
+.container{
+    border-radius: 20px;
+    float: center;
+}
 #card{
     text-align: center;
     width: 450px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-   
+    border-radius: 20px;
+}
+#plan{
+    background-color: hsl(225, 100%, 98%);
+    width: 300px;
+    float: center;
+    display: inline-block;
 }
